abstract: spellcheck error fixed
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/abstract.tex
+++ b/includes/abstract.tex
@@ -1,4 +1,4 @@
 Mobilný robot vykonáva také pohyby aké mu zadáme. Preto aby tento spôsob bol čo najefektívnejší, musí byť čitateľný dobre tak ako pre robot tak aj pre užívateľa.
-Masou úlohou je vytvoriť také prostredie na ovládanie robota, tak aby bol kód efektívny a jednoduchý. Tým pádom bude čitateľný pre ľudí aj robota. Rozhodli sme
+Našou úlohou je vytvoriť také prostredie na ovládanie robota, tak aby bol kód efektívny a jednoduchý. Tým pádom bude čitateľný pre ľudí aj robota. Rozhodli sme
 sa pre ROS druhej verzie. To prečo a ako sme spravili jednotlive časti sa dočítate ďalej.
 
