core: new acronym for JSON
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -3,4 +3,5 @@
 \newacronym{IPC}{IPC}{Inter Process Communication}
 \newacronym{LAN}{LAN}{Local Area Network}
 \newacronym{ROS}{ROS}{Robot Operating System}
+\newacronym{JSON}{JSON}{JavaScript Object Notation}
 
